--- a/less/agency.less
+++ b/less/agency.less
@@ -162,7 +162,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
-	background-image: url('../img/Colony Farm Logo Transparent.png');
+	background-image: url('../img/site-banner.png');
 	background-repeat: none;
 	background-attachment: scroll;
 	background-position: center center;
