added TED section and did more formatting

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -63,5 +63,5 @@
 
 .heading-font() {
 	font-family: "Oxygen", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	text-transform: uppercase;
+	//text-transform: uppercase;
 }
