--- a/less/agency.less
+++ b/less/agency.less
@@ -143,7 +143,7 @@ h1, h2, h3, h4, h5, h6 {
         transition: padding 0.3s;
         border: none;
 	    .navbar-brand {
-	        font-size: 2em;
+	        font-size: 4em;
 	        -webkit-transition: all 0.3s;
 	        -moz-transition: all 0.3s;
 	        transition: all 0.3s;
@@ -156,7 +156,7 @@ h1, h2, h3, h4, h5, h6 {
     	background-color: @gray-darkest;
         padding: 10px 0;
 		.navbar-brand {
-	        font-size: 1.5em;
+	        font-size: 3em;
 	    }
 	}
 }
@@ -174,7 +174,6 @@ header {
 		padding-bottom: 50px;
 		.intro-lead-in {
 			.serif-font;
-			font-style: italic;
 			font-size: 22px;
 			line-height: 22px;
 			margin-bottom: 25px;
@@ -196,7 +195,6 @@ header {
 			padding-bottom: 200px;
 			.intro-lead-in {
 				.serif-font;
-				font-style: italic;
 				font-size: 40px;
 				line-height: 40px;
 				margin-bottom: 25px;
@@ -225,7 +223,7 @@ section {
 		font-size: 16px;
 		.serif-font;
 		text-transform: none;
-		font-style: italic;
+		//font-style: italic;
 		font-weight: 400;
 		margin-bottom: 75px;
     }
