--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,8 +86,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome to Colony Farm</div>
-                <div class="intro-heading">an insect farm feeding humans</div>
+                <div class="intro-lead-in"></div>
+                <div class="intro-heading"></div>
             </div>
         </div>
     </header>
