--- a/public/css/agency.css
+++ b/public/css/agency.css
@@ -544,7 +544,7 @@ aside.clients img {
 }
 section#contact {
   background-color: #222222;
-  background-image: url('../img/bottom-banner.JPG');
+  background-image: url('../img/bottom-banner.png');
   background-position: center;
   background-repeat: no-repeat;
 }
