--- a/views/index.ejs
+++ b/views/index.ejs
@@ -135,10 +135,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <img src="img/tedx.png" class="img-responsive center-block" alt="TEDxKalamazooCollege">
-                    <h3 class="section-subheading text-muted">On May 28th, 2016, we're giving a talk for TEDx at Kalamazoo College, our alma mater. </h3>
+                    <h3 class="section-subheading text-muted">On May 28th, 2016, we gave a talk for TEDx at Kalamazoo College, our alma mater.<br>Video coming soon...hopefully...</h3>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <h3 class="text-muted">We'll be sharing our ideas of how we see the<br>entomophagy industry moving forward.</h3>
+                    <h3 class="text-muted">We shared our ideas of how we see the<br>entomophagy industry moving forward.</h3>
                 </div>
             </div>
     </section>
@@ -172,7 +172,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/portland-sign.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/hood.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -180,7 +180,7 @@
                                     <h4 class="subheading">Henry made a joke...</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">...should we move to Portland and sell bugs?</p>
+                                    <p class="text-muted">...should we move to Oregon and sell bugs?</p>
                                 </div>
                             </div>
                         </li>
@@ -208,7 +208,21 @@
                                     <h4 class="subheading">a roadtrip occurred</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">mountains were climbed, whiskey was consumed, and Portland was loved</p>
+                                    <p class="text-muted">mountains were climbed, whiskey was consumed, and Oregon (especially Bend) was loved</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/smith.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>July 2016</h4>
+                                    <h4 class="subheading">commence</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Riley is heading back to Bend to find a place to set up shop</p>
                                 </div>
                             </div>
                         </li>
@@ -240,13 +254,6 @@
                         <img src="img/henry.jpg" class="img-responsive img-circle" alt="">
                         <h4>Henry Pointon</h4>
                         <p class="text-muted">Bug Nerd</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/michael.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Michael Yeomans</h4>
-                        <p class="text-muted">Closet Nerd</p>
                     </div>
                 </div>
             </div>
