--- a/views/index.ejs
+++ b/views/index.ejs
@@ -212,14 +212,14 @@
                                 </div>
                             </div>
                         </li>
-                        <li>
+                        <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/smith.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>July 2016</h4>
-                                    <h4 class="subheading">commence</h4>
+                                    <h4 class="subheading">...next...</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Riley is heading back to Bend to find a place to set up shop</p>
