--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,7 @@ block content
             .intro-text
                 .intro-lead-in
                 .intro-heading
+
     section#id.bg-light-gray
         .container
             .row
@@ -30,4 +31,98 @@ block content
                         i.fa.fa-thumbs-up.fa-stack-1x.fa-inverse
                     h4.service-heading Advocates
                     p.text-muted We care about entomophagy not only for our own benefit, but for the benefit of the planet
+
     section#tedx
+        .container
+            .row
+                .col-lg-12.text-center
+                    img.img-responsive.center-block(src='/static/img/tedx.png', alt='TEDxKalamazooCollege')
+                    h3.section-subheading.text-muted On May 28th, 2016, we gave a talk for TEDx at Kalamazoo College, our alma mater.<br>Video coming soon...hopefully...
+                .col-lg-12.text-center
+                    h3.text-muted We shared our ideas of how we see the<br>entomophagy industry moving forward.
+
+    section#blog
+        .container
+            .row
+                .col-lg-12.text-center
+                    h2.section-subheading Blog
+                    h3.section-subheading.text-muted Cool Stuff
+                .col-lg-12.text-center
+                    h3.text-muted something interesting
+
+    section#story
+        .container
+            .row
+                .col-lg-12.text-center
+                    h2.section-subheading Our Story
+                    h3.section-subheading.text-muted the brief yet exciting (to us) history of Colony Farm
+            .row
+                .col-lg-12
+                    ul.timeline
+                        li
+                            .timeline-image
+                                img.img-circle.img-responsive(src='/static/img/hood.jpg')
+                            .timeline-panel
+                                .timeline-heading
+                                    h4 August 2015
+                                    h4.subheading Henry made a joke...
+                                .timeline-body
+                                    p.text-muted ...should we move to Oregon and sell bugs?
+                        li.timeline-inverted
+                            .timeline-image
+                                img.img-circle.img-responsive(src='/static/img/basement-setup.jpg')
+                            .timeline-panel
+                                .timeline-heading
+                                    h4 October 2015
+                                    h4.subheading the basement became a farm
+                                .timeline-body
+                                    p.text-muted thousands of crickets came to our Kalamazoo basement as we began testing farming techniques
+                        li
+                            .timeline-image
+                                img.img-circle.img-responsive(src='/static/img/monkey.jpg')
+                            .timeline-panel
+                                .timeline-heading
+                                    h4 March 2016
+                                    h4.subheading a roadtrip
+                                .timeline-body
+                                    p.text-muted rocks were climbed, whiskey was consumed, and Oregon (especially Bend) was loved
+                        li.timeline-inverted
+                            .timeline-image
+                                img.img-circle.img-responsive(src='/static/img/smith.jpg')
+                            .timeline-panel
+                                .timeline-heading
+                                    h4 August 2016
+                                    h4.subheading ...next...
+                                .timeline-body
+                                    p.text-muted we're working on setting up shop in Bend&mdash;stay tuned
+
+    section#team.bg-light-gray
+        .container
+            .row
+                .col-lg-12.text-center
+                    h2.section-heading Our Team
+                    h3.section-subheading.text-muted aren't we cute?
+            .row
+                .col-sm-offset-2.col-sm-3
+                    .team-member
+                        img.img-circle.img-responsive(src='/static/img/henry.jpg')
+                        h4 Henry Pointon
+                        p.text-muted Bug Nerd
+            .row
+                .col-sm-offset-2.col-sm-3
+                    .team-member
+                        img.img-circle.img-responsive(src='/static/img/riley.jpg')
+                        h4 Riley Lundquist
+                        p.text-muted Responsible Business Nerd
+            .row
+                .col-lg-8.col-lg-offset-2.text-center
+                    p.large.text-muted we enjoy climbing rocks, drinking whiskey and coffee, and cooking&mdash;with and without bugs
+
+    section#conact
+        .container
+            .row
+                .col-lg-12.text-center
+                    h2.section-heading Get in Touch
+                    h3.section-subheading.text-muted shoot us a message at
+                    a(href='mailto:info@colony.farm?Subject=Website%20Contact' target='_top') info@colony.farm
+                    
