--- a/views/partials/_nav.pug
+++ b/views/partials/_nav.pug
@@ -17,9 +17,9 @@ nav.navbar.navbar-default.navbar-fixed-top
                 li
                     a.page-scroll(href='#tedx') TEDx
                 li
-                    a.page-scroll(href='#funding') Funding
+                    a.page-scroll(href='#blog') Blog
                 li
-                    a.page-scroll(href='#story') Story   
+                    a.page-scroll(href='#story') Story
                 li
                     a.page-scroll(href='#team') Team
                 li
