--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,3 +14,5 @@ html(lang="en")
 			script(src='/static/js/jqBootstrapValidation.js')
 			script(src='/static/js/contact_me.js')
 			script(src='/static/js/agency.js')
+
+			include ./partials/_footer.pug
