--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ block content
                 .intro-lead-in
                 .intro-heading
 
-    section#id.bg-light-gray
+    section#about.bg-light-gray
         .container
             .row
                 .col-lg-12.text-center
@@ -16,15 +16,15 @@ block content
                 .col-md-4
                     span.fa-stack.fa-4x
                         i.fa.fa-circle.fa-stack-2x.text-primary
-                        i.fa.fa-globe.fa-stack-1x.fa-inverse
-                    h4.service-heading For Purpose
-                    p.text-muted We put mission &amp; values before profit, focusing on environmental and social responsibility
-                .col-md-4
-                    span.fa-stack.fa-4x
-                        i.fa.fa-circle.fa-stack-2x.text-primary
                         i.fa.fa-envira.fa-stack-1x.fa-inverse
                     h4.service-heading Farmers
                     p.text-muted We put farming first&mdash;developing new techniques to be the most efficient and most responsible we can
+                .col-md-4
+                    span.fa-stack.fa-4x
+                        i.fa.fa-circle.fa-stack-2x.text-primary
+                        i.fa.fa-globe.fa-stack-1x.fa-inverse
+                    h4.service-heading For Purpose
+                    p.text-muted We put mission &amp; values before profit, focusing on environmental and social responsibility
                 .col-md-4
                     span.fa-stack.fa-4x
                         i.fa.fa-circle.fa-stack-2x.text-primary
@@ -41,16 +41,7 @@ block content
                 .col-lg-12.text-center
                     h3.text-muted We shared our ideas of how we see the<br>entomophagy industry moving forward.
 
-    section#blog.bg-light-gray
-        .container
-            .row
-                .col-lg-12.text-center
-                    h2.section-subheading Blog
-                    h3.section-subheading.text-muted Cool Stuff
-                .col-lg-12.text-center
-                    h3.text-muted something interesting
-
-    section#story
+    section#story.bg-light-gray
         .container
             .row
                 .col-lg-12.text-center
@@ -96,7 +87,7 @@ block content
                                 .timeline-body
                                     p.text-muted we're working on setting up shop in Bend&mdash;stay tuned
 
-    section#team.bg-light-gray
+    section#team
         .container
             .row
                 .col-lg-12.text-center
@@ -107,12 +98,10 @@ block content
                     .team-member
                         img.img-circle.img-responsive(src='/static/img/henry.jpg')
                         h4 Henry Pointon
-                        p.text-muted Bug Nerd
                 .col-sm-offset-2.col-sm-3
                     .team-member
                         img.img-circle.img-responsive(src='/static/img/riley.jpg')
                         h4 Riley Lundquist
-                        p.text-muted Responsible Business Nerd
             .row
                 .col-lg-8.col-lg-offset-2.text-center
                     p.large.text-muted we enjoy climbing rocks, drinking whiskey and coffee, and cooking&mdash;with and without bugs
