--- a/views/partials/_nav.pug
+++ b/views/partials/_nav.pug
@@ -6,7 +6,7 @@ nav.navbar.navbar-default.navbar-fixed-top
                 span.icon-bar
                 span.icon-bar
                 span.icon-bar
-            a.navbar-brand.page-scroll(href='#page-top') colony farm
+            a.navbar-brand.page-scroll(href='/') colony farm
 
         .collapse.navbar-collapse#bs-example-navbar-collapse-1
             ul.nav.navbar-nav.navbar-right
